crates/tanren-domain/tests/snapshots/snapshot_events__step_started.snap
---
source: crates/tanren-domain/tests/snapshot_events.rs
expression: json
---
{
  "schema_version": 1,
  "event_id": "01966a00-0000-7000-8000-000000000001",
  "timestamp": "2025-06-15T12:00:00Z",
  "entity_ref": {
    "type": "dispatch",
    "id": "01966a00-0000-7000-8000-000000000001"
  },
  "payload": {
    "event_type": "step_started",
    "dispatch_id": "01966a00-0000-7000-8000-000000000001",
    "step_id": "01966a00-0000-7000-8000-000000000001",
    "worker_id": "worker-1",
    "step_type": "execute"
  }
}
